force-app/main/default/objects/GlobalProperties__c/GlobalProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Propriétés globales</label>
</CustomObject>