force-app/main/default/objects/GlobalProperties__c/fields/actif__c.field-meta.xml
<CustomField>
    <fullName>actif__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>