force-app/main/default/objects/GlobalProperties__c/fields/booleanValue__c.field-meta.xml
<CustomField>
    <fullName>booleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booléen</label>
    <type>Checkbox</type>
</CustomField>