force-app/main/default/objects/GlobalProperties__c/fields/dateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>dateTimeValue__c</fullName>
    <label>Date/Heure</label>
    <type>DateTime</type>
</CustomField>