force-app/main/default/objects/GlobalProperties__c/fields/dateValue__c.field-meta.xml
<CustomField>
    <fullName>dateValue__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>