force-app/main/default/objects/GlobalProperties__c/fields/numberValue__c.field-meta.xml
<CustomField>
    <fullName>numberValue__c</fullName>
    <label>Numéro</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>