force-app/main/default/objects/GlobalProperties__c/fields/stringValue__c.field-meta.xml
<CustomField>
    <fullName>stringValue__c</fullName>
    <label>Texte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>