force-app/main/default/objects/GlobalProperties__c/listViews/Complete.listView-meta.xml
<ListView>
    <fullName>Complete</fullName>
    <columns>NAME</columns>
    <columns>actif__c</columns>
    <columns>booleanValue__c</columns>
    <columns>dateValue__c</columns>
    <columns>dateTimeValue__c</columns>
    <columns>numberValue__c</columns>
    <columns>stringValue__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Complète</label>
    <language>fr</language>
</ListView>